--- a/Aier360/Controllers/校园/短信账户/MessageAccount.storyboard
+++ b/Aier360/Controllers/校园/短信账户/MessageAccount.storyboard
@@ -242,7 +242,7 @@
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="65" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6Hr-a6-A45">
                                 <rect key="frame" x="0.0" y="20" width="600" height="580"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <inset key="separatorInset" minX="15" minY="0.0" maxX="15" maxY="0.0"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ZXMessageRecordTableViewCell" rowHeight="65" id="Qud-GX-qTI" customClass="ZXMessageRecordTableViewCell">
@@ -288,7 +288,7 @@
                                                 <constraint firstAttribute="trailing" secondItem="9FQ-zQ-1aj" secondAttribute="trailing" constant="15" id="v62-6b-U0f"/>
                                             </constraints>
                                         </tableViewCellContentView>
-                                        <color key="backgroundColor" red="0.96470588235294119" green="0.95294117647058818" blue="0.9137254901960784" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="backgroundColor" red="1" green="0.98823529409999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
                                         <connections>
                                             <outlet property="nameLabel" destination="9FQ-zQ-1aj" id="sk0-Qx-xyj"/>
                                             <outlet property="numLabel" destination="3aq-cM-mUo" id="68T-x5-4LH"/>
@@ -318,6 +318,114 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vnU-K5-fcJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1043" y="1197"/>
+        </scene>
+        <!--Message Record Detail View Controller-->
+        <scene sceneID="vyr-CR-Hew">
+            <objects>
+                <viewController storyboardIdentifier="ZXMessageRecordDetailViewController" id="2AU-BC-Zsz" customClass="ZXMessageRecordDetailViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="BEU-qK-dIi"/>
+                        <viewControllerLayoutGuide type="bottom" id="jc0-ZD-7u7"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="c0H-gf-8VY">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="55" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="R59-H8-ZhY">
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <view key="tableHeaderView" contentMode="scaleToFill" id="swP-9q-mWE">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="162"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="购买成功" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bat-lJ-deh">
+                                            <rect key="frame" x="268" y="16" width="64" height="20"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <color key="textColor" red="0.63137254901960782" green="0.61568627450980395" blue="0.58039215686274503" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vhJ-iT-Mgs">
+                                            <rect key="frame" x="264" y="64" width="73" height="36"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                            <color key="textColor" red="0.13333333333333333" green="0.13333333333333333" blue="0.13333333333333333" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ii3-K1-ydX">
+                                            <rect key="frame" x="282" y="110" width="36" height="17"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <color key="textColor" red="0.37254901960784315" green="0.37254901960784315" blue="0.37254901960784315" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" red="1" green="0.98823529409999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
+                                    <constraints>
+                                        <constraint firstItem="vhJ-iT-Mgs" firstAttribute="centerX" secondItem="swP-9q-mWE" secondAttribute="centerX" id="5Cg-y9-e7t"/>
+                                        <constraint firstAttribute="bottom" secondItem="Ii3-K1-ydX" secondAttribute="bottom" constant="35" id="Ifr-QN-nAZ"/>
+                                        <constraint firstItem="vhJ-iT-Mgs" firstAttribute="top" secondItem="Bat-lJ-deh" secondAttribute="bottom" constant="28" id="a4a-rv-h3y"/>
+                                        <constraint firstItem="Bat-lJ-deh" firstAttribute="top" secondItem="swP-9q-mWE" secondAttribute="top" constant="16" id="eda-VP-NSj"/>
+                                        <constraint firstItem="Ii3-K1-ydX" firstAttribute="centerX" secondItem="swP-9q-mWE" secondAttribute="centerX" id="exy-hg-BhZ"/>
+                                        <constraint firstItem="Bat-lJ-deh" firstAttribute="centerX" secondItem="swP-9q-mWE" secondAttribute="centerX" id="k38-47-mGM"/>
+                                    </constraints>
+                                </view>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="ZXOriderContentTableViewCell" id="JK8-Ke-9g6" customClass="ZXOriderContentTableViewCell">
+                                        <rect key="frame" x="0.0" y="190" width="600" height="55"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="JK8-Ke-9g6" id="jIZ-4V-Buu">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="54"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="agR-by-dXp">
+                                                    <rect key="frame" x="15" y="21" width="40" height="20"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" red="0.37254901959999998" green="0.37254901959999998" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VyB-fh-1Wb">
+                                                    <rect key="frame" x="545" y="21" width="40" height="20"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" red="0.37254901959999998" green="0.37254901959999998" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="agR-by-dXp" firstAttribute="leading" secondItem="jIZ-4V-Buu" secondAttribute="leading" constant="15" id="0N4-sa-1In"/>
+                                                <constraint firstItem="VyB-fh-1Wb" firstAttribute="top" secondItem="jIZ-4V-Buu" secondAttribute="top" constant="21" id="7Gy-op-Bjh"/>
+                                                <constraint firstAttribute="trailing" secondItem="VyB-fh-1Wb" secondAttribute="trailing" constant="15" id="bsR-fN-na2"/>
+                                                <constraint firstItem="agR-by-dXp" firstAttribute="top" secondItem="jIZ-4V-Buu" secondAttribute="top" constant="21" id="xha-jE-ZHo"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" red="1" green="0.98823529409999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
+                                        <connections>
+                                            <outlet property="contentLabel" destination="VyB-fh-1Wb" id="r02-5G-C5f"/>
+                                            <outlet property="titleLabel" destination="agR-by-dXp" id="tpS-VE-g6K"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="2AU-BC-Zsz" id="Ywo-25-5Q0"/>
+                                    <outlet property="delegate" destination="2AU-BC-Zsz" id="u5S-ok-s0Z"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="R59-H8-ZhY" firstAttribute="leading" secondItem="c0H-gf-8VY" secondAttribute="leading" id="79Q-Pa-Z9z"/>
+                            <constraint firstItem="R59-H8-ZhY" firstAttribute="top" secondItem="BEU-qK-dIi" secondAttribute="bottom" id="KQg-Fz-Gv7"/>
+                            <constraint firstItem="jc0-ZD-7u7" firstAttribute="top" secondItem="R59-H8-ZhY" secondAttribute="bottom" id="TJS-bC-5NH"/>
+                            <constraint firstAttribute="trailing" secondItem="R59-H8-ZhY" secondAttribute="trailing" id="ows-X1-k4n"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="moneyLabel" destination="vhJ-iT-Mgs" id="B2I-0s-4xs"/>
+                        <outlet property="numLabel" destination="Ii3-K1-ydX" id="830-Ph-vnd"/>
+                        <outlet property="stateLabel" destination="Bat-lJ-deh" id="Ua4-Yr-bZX"/>
+                        <outlet property="tableView" destination="R59-H8-ZhY" id="nKL-Yd-KTJ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HQf-QN-rKu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1036" y="1861"/>
         </scene>
         <!--Get Success View Controller-->
         <scene sceneID="6fS-1J-3aR">
